example/hello_ws_coro/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address: {socket_address: {address: 0.0.0.0, port_value: 8081}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: default
              domains: ["localhost:8081"]
              routes:
              - match: { prefix: "/ws" }
                route:
                  cluster: ws_chat_ws
                  upgrade_configs:
                    - upgrade_type: "websocket"
                      enabled: true                
              - match: { safe_regex: { regex: ".*" } }
                route:
                  cluster: ws_chat
          http_filters:                  
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: "h2"            
            tls_certificates:
            - certificate_chain: {filename: "/etc/server.crt"}
              private_key: {filename: "/etc/server.key"}
#            validation_context:
#              trusted_ca:
#                filename: certs/cacert.pem
#          sni: "localhost" 
  clusters:
  - name: ws_chat
    type: STRICT_DNS
    connect_timeout: 15.25s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: { allow_connect: true }
    load_assignment:
      cluster_name: ws_chat
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web
                port_value: 9876
    transport_socket: 
      name: envoy.transport_sockets.tls 
      typed_config: 
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext 
        sni: localhost
        common_tls_context: 
          alpn_protocols: "h2"         
  - name: ws_chat_ws
    type: STRICT_DNS
    connect_timeout: 15.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ws_chat
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web
                port_value: 9876
    transport_socket: 
      name: envoy.transport_sockets.tls 
      typed_config: 
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext 
        sni: localhost

#admin:
#  access_log_path: "/dev/null"
#  address:
#    socket_address:
#      address: 0.0.0.0
#      port_value: 8001
